--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<"device-width>, initial-scale=1.0">
+    <meta name="viewport" content="width="device-width>, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <h1>SESI-SENAI</h1>
     <h3>Escola de Formação Técnica</h3>
+    <p>O SENAI está neste momento com uma parceria com o SESI</p>
 </body>
 </html>
